# tauri-plugin-sqlite

./: .gitignore  Cargo.toml  README.md  api-iife.js  build.rs  eslint.config.cjs  package-lock.json  package.json  rollup.config.js  tsconfig.json  tsconfig.src.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml
crates/sqlx-sqlite-conn-mgr/: Cargo.toml  LICENSE  README.md  for_readonly_tests.db
crates/sqlx-sqlite-conn-mgr/src/: attached.rs  config.rs  database.rs  error.rs  lib.rs  write_guard.rs
crates/sqlx-sqlite-conn-mgr/tests/: attached_tests.rs  database_tests.rs
crates/sqlx-sqlite-observer/: Cargo.toml  LICENSE  README.md
crates/sqlx-sqlite-observer/src/: broker.rs  change.rs  config.rs  connection.rs  error.rs  hooks.rs  lib.rs  observer.rs  stream.rs
crates/sqlx-sqlite-observer/tests/: integration_tests.rs
crates/sqlx-sqlite-toolkit/: Cargo.toml  README.md
crates/sqlx-sqlite-toolkit/src/: builders.rs  decode.rs  error.rs  lib.rs  transactions.rs  wrapper.rs
crates/sqlx-sqlite-toolkit/tests/: interruptible_transaction_tests.rs  transaction_state_tests.rs  wrapper_tests.rs
doc-test-fixtures/: README.md
doc-test-fixtures/migrations/: 20240101000000_dummy.sql
examples/observer-demo/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
examples/observer-demo/src/: App.vue  style.css  vite-env.d.ts
examples/observer-demo/src-tauri/: Cargo.toml  tauri.conf.json
examples/observer-demo/src-tauri/.cargo/: config.toml
examples/observer-demo/src-tauri/capabilities/: default.json
examples/observer-demo/src-tauri/src/: main.rs
examples/observer-demo/src/components/: ActionBar.vue  ChangeFeed.vue  MessageList.vue
examples/pagination-demo/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
examples/pagination-demo/src/: App.vue  style.css
examples/pagination-demo/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
examples/pagination-demo/src-tauri/src/: lib.rs  main.rs
examples/pagination-demo/src/components/: ControlPanel.vue  PerformancePanel.vue  VirtualizedList.vue
guest-js/: index.test.ts  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: begin_interruptible_transaction.toml  execute_transaction.toml  fetch_all.toml  fetch_one.toml  fetch_page.toml  get_migration_events.toml  observe.toml  unobserve.toml
permissions/schemas/: schema.json
src/: builders.rs  commands.rs  error.rs  lib.rs  resolve.rs  subscriptions.rs  transactions.rs  wrapper.rs
tests/: interruptible_transaction_tests.rs  wrapper_tests.rs
