[workspace]
resolver = "3"
members = [
   "crates/sqlx-sqlite-conn-mgr",
   "crates/sqlx-sqlite-observer",
   "crates/sqlx-sqlite-toolkit",
]
exclude = ["examples/observer-demo/src-tauri"]

[package]
name = "tauri-plugin-sqlite"
version = "0.2.0"
description = "A Tauri plugin for SQLite with connection pooling, builder-pattern queries, transactions, and reactive change notifications"
license = "MIT"
edition = "2024"
rust-version = "1.89"
links = "tauri-plugin-sqlite"

[dependencies]
tauri = "2.9.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["rt", "sync", "time"] }
indexmap = { version = "2.12.1", features = ["serde"] }
base64 = "0.22.1"
tracing = { version = "0.1.41", default-features = false, features = ["std", "release_max_level_off"] }
uuid = { version = "1.11.0", features = ["v4"] }

# SQLx for types and queries (time feature enables datetime type decoding)
sqlx = { version = "0.8.6", features = ["sqlite", "json", "time", "runtime-tokio"] }

# Connection manager
sqlx-sqlite-conn-mgr = { path = "crates/sqlx-sqlite-conn-mgr" }

# Toolkit (high-level API — builders, transactions, decoding)
sqlx-sqlite-toolkit = { path = "crates/sqlx-sqlite-toolkit", features = ["observer"] }

# Observer types (for payload conversion)
sqlx-sqlite-observer = { path = "crates/sqlx-sqlite-observer", features = ["conn-mgr"] }

# Async stream support for observer subscriptions
futures = "0.3.31"

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
