[package]
name = "sqlx-sqlite-conn-mgr"
version = "0.8.6" # Sync with SQLx crate version
description = "Wraps SQLx for SQLite, enforcing pragmatic connection policies for mobile and desktop applications"
license = "MIT"
edition = "2024"
rust-version = "1.89"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "release_max_level_off"] }
