[package]
name = "sqlx-sqlite-conn-mgr"
# Sync major.minor with major.minor of SQLx crate
version = "0.8.6"
description = "Wraps SQLx for SQLite, enforcing pragmatic connection policies for mobile and desktop applications"
authors = ["Jeremy Thomerson"]
license = "MIT"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/silvermine/tauri-plugin-sqlite"
readme = "README.md"
keywords = ["sqlite", "sqlx", "database", "connection-pool", "async"]
categories = ["database", "asynchronous"]

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41", default-features = false, features = ["std", "release_max_level_off"] }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.23.0"
