[package]
name = "sqlx-sqlite-observer"
# Sync major.minor with major.minor of SQLx crate
version = "0.8.6"
license = "MIT"
edition = "2024"
rust-version = "1.89"
authors = ["Jeremy Thomerson"]
description = "Reactive change notifications for SQLite databases using sqlx"
repository = "https://github.com/silvermine/tauri-plugin-sqlite"
readme = "README.md"
keywords = ["sqlite", "sqlx", "reactive", "observer", "database"]
categories = ["database", "asynchronous"]

[features]
# Bundle SQLite by default - preupdate hooks require SQLITE_ENABLE_PREUPDATE_HOOK
# which most system SQLite libraries don't have enabled.
default = ["bundled"]
bundled = ["libsqlite3-sys/bundled"]

[dependencies]
tokio = { version = "1.49.0", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2.0.17"
tracing = { version = "0.1.44", default-features = false, features = ["std", "release_max_level_off"] }
parking_lot = "0.12.3"
regex = "1.12.3"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"], default-features = false }
# Required for preupdate_hook - SQLite must be compiled with SQLITE_ENABLE_PREUPDATE_HOOK
libsqlite3-sys = { version = "0.30.1", features = ["preupdate_hook"] }

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full", "macros"] }
futures = "0.3.31"
tempfile = "3.24.0"
tracing-subscriber = "0.3.22"
