[package]
name = "sqlx-sqlite-toolkit"
# Sync major.minor with major.minor of SQLx crate
version = "0.8.6"
license = "MIT"
edition = "2024"
rust-version = "1.89"

[features]
default = []
observer = ["dep:sqlx-sqlite-observer"]

[dependencies]
sqlx-sqlite-conn-mgr = { path = "../sqlx-sqlite-conn-mgr" }
sqlx-sqlite-observer = { path = "../sqlx-sqlite-observer", features = ["conn-mgr"], optional = true }
sqlx = { version = "0.8.6", features = ["sqlite", "json", "time", "runtime-tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
indexmap = { version = "2.12", features = ["serde"] }
base64 = "0.22"
time = "0.3"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1.48.0", features = ["sync", "rt"] }
tracing = { version = "0.1", default-features = false, features = ["std", "release_max_level_off"] }

[dev-dependencies]
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
