[package]
name = "pagination-demo"
version = "0.0.0"
edition = "2024"
rust-version = "1.89"

[lib]
name = "pagination_demo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.9.3", features = [] }
tauri-plugin-sqlite = { path = "../../.." }

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }
